--- a/index.html
+++ b/index.html
@@ -4,195 +4,76 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Retro Newspaper</title>
-
-    <style>
-      body {
-        margin: 0;
-        background: #f2f2e8;
-        font-family: "Times New Roman", serif;
-        display: flex;
-        justify-content: center;
-        padding: 40px;
-      }
-
-      /* PRINT BUTTON */
-      #printBtn {
-        position: fixed;
-        top: 20px;
-        right: 20px;
-        background: #222;
-        color: #fff;
-        padding: 10px 18px;
-        border: none;
-        cursor: pointer;
-        font-size: 16px;
-      }
-
-      /* NEWSPAPER */
-      .paper {
-        width: 750px;
-        background: #f0e3c0;
-        border: 1px solid #222;
-        padding: 25px;
-        box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
-      }
-
-      .header {
-        text-align: center;
-        font-size: 42px;
-        font-weight: bold;
-        letter-spacing: 3px;
-        margin-bottom: 5px;
-      }
-
-      .subheader {
-        text-align: center;
-        font-size: 22px;
-        margin-bottom: 10px;
-      }
-
-      .top-line {
-        display: flex;
-        justify-content: space-between;
-        font-size: 14px;
-        border-top: 2px solid #000;
-        border-bottom: 2px solid #000;
-        padding: 8px 0;
-        margin-bottom: 15px;
-      }
-
-      /* IMAGE AREA */
-      .photo-panel {
-        width: 100%;
-        height: 350px;
-        margin-bottom: 25px;
-      }
-
-      .photo {
-        width: 100%;
-        height: 100%;
-        background: rgba(0, 0, 0, 0.05);
-        border: 1px dashed rgba(0, 0, 0, 0.4);
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-size: 20px;
-        cursor: pointer;
-        text-align: center;
-        padding: 10px;
-        box-sizing: border-box;
-      }
-
-      /* COLUMNS */
-      .columns {
-        column-count: 3;
-        column-gap: 25px;
-        font-size: 14px;
-      }
-
-      .columns h2 {
-        font-size: 16px;
-        margin-top: 0;
-      }
-
-      /* PRINT STYLES */
-      @media print {
-        body {
-          padding: 0;
-          background: white;
-        }
-        #printBtn {
-          display: none;
-        }
-        .paper {
-          box-shadow: none;
-          border: none;
-          width: 100%;
-          margin: 0;
-          padding: 20px;
-        }
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" />
   </head>
-
   <body>
-    <button id="printBtn">Print</button>
+    <div class="container">
+      <button id="printBtn">Print</button>
 
-    <div class="paper" id="newspaper">
-      <!-- HEADER -->
-      <div class="header">RETRO EXPRESS</div>
-      <div class="subheader">Newspaper</div>
+      <div id="newspaper">
+        <div class="header">
+          <div class="header-left">
+            <div class="small-title">NATIONAL GEOGRAPHIC MAGAZINE</div>
+            <div class="cam-icon">📷</div>
+          </div>
 
-      <div class="top-line">
-        <span>No. 10</span>
-        <span>Thursday, November 7th, 1945</span>
-        <span>Price 3 Cents</span>
-      </div>
+          <h1 class="main-title">RETRO EXPRESS</h1>
+          <h2 class="sub-title">Newspaper</h2>
 
-      <!-- IMAGE PICKER -->
-      <div class="photo-panel">
-        <input
-          type="file"
-          id="imageInput"
-          accept="image/*"
-          style="display: none"
-        />
+          <div class="header-row">
+            <span>No. 30</span>
+            <span>Thursday, November 11th, 1945</span>
+            <span>Price 3 Cents</span>
+          </div>
+        </div>
 
-        <div class="photo" id="photoDisplay">Tap here to add photo</div>
-      </div>
+        <div class="image-wrapper">
+          <img id="uploadImage" src="placeholder.png" alt="Tap to upload" />
+          <input
+            type="file"
+            id="fileInput"
+            accept="image/*"
+            capture="environment"
+          />
+        </div>
 
-      <!-- NEWSPAPER CONTENT -->
-      <div class="columns">
-        <h2>BENGALURU: BENDA KALURA</h2>
-        <p>
-          Bengaluru, etiam notum ut Bangalore, est urbs maxima in regione
-          Karnataka. Haec urbs centra technologiae, vibrant economy, et cultural
-          diversity.
-        </p>
+        <div class="columns">
+          <div class="column">
+            <h3>BENGALURU: BENDA KALURA</h3>
+            <p>
+              Bengaluru, etiam notum ut Bangalore, est urbs maxima in regione
+              Karnataka. Haec urbs, plena historia et cultu vibrans, est centrum
+              technologiae et commercii Indiae. Numerus incolarum Bengaluru
+              inter 10 et 12 miliones aestimatur, et clima est magis aequabile
+              propter altitudinem urbem moderantem.
+            </p>
+            <p>
+              Bengaluru centrum informationis Indiae est. Multae societates
+              internationales sicut Infosys, TCS, IBM, et Google ibi sedem
+              habent. Itaque Bengaluru saepe vocatur “Silicon Valley Indiae”.
+            </p>
+          </div>
 
-        <h2>Clima et Geographia</h2>
-        <p>
-          Clima Bengaluru est mite per totum annum. Temperatura variat inter
-          20°C et 30°C, quod facit urbem amoenam et vivibilem.
-        </p>
+          <div class="column">
+            <h3>Clima et Geographia</h3>
+            <p>
+              Clima Bengaluru est aliud aspectum quod multos attrahit. Nisi
+              veris et aestate, aer temperatus est frigidus, cum temperaturis
+              inter 20 et 30 gradus Celsius. Hoc clima Indiae tropicali urbem
+              iucundam facit.
+            </p>
 
-        <h2>BENGALURU: URBS TECHNOLOGICA INDIAE</h2>
-        <p>
-          Bengaluru saepe vocatur Silicon Valley Indiae. Multae societates
-          internationales ibi existunt sicut Microsoft, IBM, Google, et aliae.
-        </p>
+            <h3>BENGALURU: URBS TECHNOLOGICA INDIAE</h3>
+            <p>
+              Progressus technologicus Bengaluru notum fecit in tota India.
+              Multae societates internationales ibi sedes habent. Historia urbis
+              longa est et cultura dives.
+            </p>
+          </div>
+        </div>
       </div>
     </div>
 
-    <script>
-      // Image Picker
-      const input = document.getElementById("imageInput");
-      const display = document.getElementById("photoDisplay");
-
-      display.addEventListener("click", () => {
-        input.click();
-      });
-
-      input.addEventListener("change", (event) => {
-        const file = event.target.files[0];
-        if (!file) return;
-
-        const reader = new FileReader();
-        reader.onload = (e) => {
-          display.style.backgroundImage = `url(${e.target.result})`;
-          display.style.backgroundSize = "cover";
-          display.style.backgroundPosition = "center";
-          display.style.color = "transparent";
-          display.textContent = "";
-        };
-
-        reader.readAsDataURL(file);
-      });
-
-      // Print Button
-      document.getElementById("printBtn").addEventListener("click", () => {
-        window.print();
-      });
-    </script>
+    <script src="script.js"></script>
   </body>
 </html>
