--- a/index.html
+++ b/index.html
@@ -4,76 +4,229 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Retro Newspaper</title>
-    <link rel="stylesheet" href="style.css" />
+
+    <style>
+      body {
+        margin: 0;
+        background: #e9e2cf;
+        font-family: "Times New Roman", serif;
+        display: flex;
+        justify-content: center;
+        padding: 40px;
+      }
+
+      #printBtn {
+        position: fixed;
+        top: 20px;
+        right: 20px;
+        background: #222;
+        color: #fff;
+        padding: 10px 18px;
+        border: none;
+        cursor: pointer;
+        font-size: 16px;
+      }
+
+      .paper {
+        width: 820px;
+        background: #f0e3c0;
+        border: 3px solid #000;
+        padding: 25px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+        position: relative;
+      }
+
+      /* TOP CORNER BOXES DRAWN WITH CSS */
+      .corner-box {
+        position: absolute;
+        top: 25px;
+        width: 150px;
+        height: 150px;
+        border: 2px solid #000;
+        padding: 8px;
+        font-size: 12px;
+        text-align: center;
+        font-weight: bold;
+      }
+
+      #leftBox {
+        left: 25px;
+      }
+
+      #rightBox {
+        right: 25px;
+      }
+
+      .header {
+        text-align: center;
+        font-size: 58px;
+        font-weight: bold;
+        letter-spacing: 4px;
+        margin-bottom: 5px;
+        margin-top: 80px;
+        text-transform: uppercase;
+      }
+
+      .subheader {
+        text-align: center;
+        font-size: 26px;
+        margin-bottom: 15px;
+      }
+
+      .double-line {
+        border-bottom: 3px solid black;
+        margin-bottom: 3px;
+      }
+
+      .thin-line {
+        border-bottom: 1px solid black;
+        margin-bottom: 12px;
+      }
+
+      .top-strip {
+        display: flex;
+        justify-content: space-between;
+        font-size: 16px;
+        border-top: 2px solid black;
+        border-bottom: 2px solid black;
+        padding: 8px 0;
+        margin-bottom: 20px;
+      }
+
+      .photo-panel {
+        width: 100%;
+        height: 380px;
+        margin-bottom: 25px;
+        border: 2px solid #000;
+      }
+
+      .photo {
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.05);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 20px;
+        cursor: pointer;
+        text-align: center;
+      }
+
+      /* TRIPLE COLUMNS */
+      .columns {
+        column-count: 3;
+        column-gap: 25px;
+        font-size: 14.5px;
+        line-height: 1.25;
+      }
+
+      .columns h2 {
+        font-size: 16px;
+        margin-top: 0;
+        font-weight: bold;
+        text-transform: uppercase;
+      }
+
+      @media print {
+        #printBtn {
+          display: none;
+        }
+        body {
+          background: white;
+        }
+        .paper {
+          box-shadow: none;
+          border: none;
+        }
+      }
+    </style>
   </head>
+
   <body>
-    <div class="container">
-      <button id="printBtn">Print</button>
+    <button id="printBtn">Print</button>
 
-      <div id="newspaper">
-        <div class="header">
-          <div class="header-left">
-            <div class="small-title">NATIONAL GEOGRAPHIC MAGAZINE</div>
-            <div class="cam-icon">📷</div>
-          </div>
+    <div class="paper" id="newspaper">
+      <!-- TOP LEFT BOX -->
+      <div class="corner-box" id="leftBox">
+        National Geographic<br />
+        Magazine<br /><br />
+        📷 Camera Dept.
+      </div>
 
-          <h1 class="main-title">RETRO EXPRESS</h1>
-          <h2 class="sub-title">Newspaper</h2>
+      <!-- TOP RIGHT BOX -->
+      <div class="corner-box" id="rightBox">
+        Progress Apparatus<br />
+        Office<br /><br />
+        Est. 1921
+      </div>
 
-          <div class="header-row">
-            <span>No. 30</span>
-            <span>Thursday, November 11th, 1945</span>
-            <span>Price 3 Cents</span>
-          </div>
-        </div>
+      <!-- HEADER -->
+      <div class="header">RETRO EXPRESS</div>
+      <div class="subheader">Newspaper</div>
 
-        <div class="image-wrapper">
-          <img id="uploadImage" src="placeholder.png" alt="Tap to upload" />
-          <input
-            type="file"
-            id="fileInput"
-            accept="image/*"
-            capture="environment"
-          />
-        </div>
+      <div class="double-line"></div>
+      <div class="thin-line"></div>
 
-        <div class="columns">
-          <div class="column">
-            <h3>BENGALURU: BENDA KALURA</h3>
-            <p>
-              Bengaluru, etiam notum ut Bangalore, est urbs maxima in regione
-              Karnataka. Haec urbs, plena historia et cultu vibrans, est centrum
-              technologiae et commercii Indiae. Numerus incolarum Bengaluru
-              inter 10 et 12 miliones aestimatur, et clima est magis aequabile
-              propter altitudinem urbem moderantem.
-            </p>
-            <p>
-              Bengaluru centrum informationis Indiae est. Multae societates
-              internationales sicut Infosys, TCS, IBM, et Google ibi sedem
-              habent. Itaque Bengaluru saepe vocatur “Silicon Valley Indiae”.
-            </p>
-          </div>
+      <div class="top-strip">
+        <span>No. 10</span>
+        <span>Thursday, November 7th, 1945</span>
+        <span>Price 3 Cents</span>
+      </div>
 
-          <div class="column">
-            <h3>Clima et Geographia</h3>
-            <p>
-              Clima Bengaluru est aliud aspectum quod multos attrahit. Nisi
-              veris et aestate, aer temperatus est frigidus, cum temperaturis
-              inter 20 et 30 gradus Celsius. Hoc clima Indiae tropicali urbem
-              iucundam facit.
-            </p>
+      <!-- IMAGE UPLOADER -->
+      <div class="photo-panel">
+        <input
+          type="file"
+          id="imageInput"
+          accept="image/*"
+          style="display: none"
+        />
+        <div class="photo" id="photoDisplay">Tap here to add photo</div>
+      </div>
 
-            <h3>BENGALURU: URBS TECHNOLOGICA INDIAE</h3>
-            <p>
-              Progressus technologicus Bengaluru notum fecit in tota India.
-              Multae societates internationales ibi sedes habent. Historia urbis
-              longa est et cultura dives.
-            </p>
-          </div>
-        </div>
+      <!-- CONTENT -->
+      <div class="columns">
+        <h2>Bengaluru: Benda Kalura</h2>
+        <p>
+          Bengaluru, etiam notum ut Bangalore, est urbs maxima in regione
+          Karnataka. Haec urbs plena est technologia, historia, ac cultura
+          vibrante.
+        </p>
+
+        <h2>Clima et Geographia</h2>
+        <p>Clima Bengaluru est mite, cum temperaturis stabilibus per annum.</p>
+
+        <h2>Bengaluru: urbs technologica Indiae</h2>
+        <p>
+          Bengaluru vocatur Silicon Valley Indiae propter societates
+          technologiae internationales ibi positas.
+        </p>
       </div>
     </div>
 
-    <script src="script.js"></script>
+    <script>
+      const input = document.getElementById("imageInput");
+      const display = document.getElementById("photoDisplay");
+
+      display.addEventListener("click", () => input.click());
+
+      input.addEventListener("change", (e) => {
+        const file = e.target.files[0];
+        if (!file) return;
+
+        const reader = new FileReader();
+        reader.onload = (ev) => {
+          display.style.backgroundImage = `url(${ev.target.result})`;
+          display.style.backgroundSize = "cover";
+          display.style.backgroundPosition = "center";
+          display.textContent = "";
+        };
+        reader.readAsDataURL(file);
+      });
+
+      document.getElementById("printBtn").addEventListener("click", () => {
+        window.print();
+      });
+    </script>
   </body>
 </html>
