--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Retro Newspaper</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="container">
@@ -35,7 +38,9 @@
 
         <div class="header-row">
           <span class="issue-info">NO. 30</span>
-          <span class="issue-info date-center">THURSDAY, NOVEMBER 11TH, 1945</span>
+          <span class="issue-info date-center"
+            >THURSDAY, NOVEMBER 11TH, 1945</span
+          >
           <span class="issue-info price-right">PRICE 3 CENTS</span>
         </div>
 
@@ -43,28 +48,18 @@
           <div class="image-column-wrapper">
             <div class="image-wrapper">
               <img id="uploadImage" src="placeholder.png" alt="Tap to upload" />
-              <input
-                type="file"
-                id="fileInput"
-                accept="image/*"
-                capture="environment"
-              />
+              <input type="file" id="fileInput" accept="image/*" />
             </div>
           </div>
-          
+
           <div class="article-right-top">
             <p>
-              **Praeter technologicae** suae
-              successum, Bengaluru etiam est civitas
-              plena cultura et diversitate. Multi
-              populi hic habitant, loquentes
-              linguas vivunt, creantes atmosphaeram
-              vere cosmopolitam. In urbe,
-              nominata pro suis hortis et parcis,
-              musici, et theatrales frequentiae
-              sunt. Lacus urbs est notus ob hortos
-              suos pulcherrimos, ut Cubbon Park,
-              qui hominibus tranquillitatem
+              **Praeter technologicae** suae successum, Bengaluru etiam est
+              civitas plena cultura et diversitate. Multi populi hic habitant,
+              loquentes linguas vivunt, creantes atmosphaeram vere cosmopolitam.
+              In urbe, nominata pro suis hortis et parcis, musici, et theatrales
+              frequentiae sunt. Lacus urbs est notus ob hortos suos
+              pulcherrimos, ut Cubbon Park, qui hominibus tranquillitatem
               praebent.
             </p>
             <div class="qr-box">
@@ -79,10 +74,10 @@
             <h3 class="article-title">BENGALURU: BENDA KALURA</h3>
             <p>
               Bengaluru etiam notum ut Bangalore, est urbs maxima in regione
-              Karnataka. Haec urbs, plena **historia** et cultu vibrans, est centrum
-              technologiae et commercii Indiae. Numerus incolarum Bengaluru
-              est inter **10 et 12 miliones** aestimatur, et urbs est nota
-              propter **temperamentum** frigidum in urbem modernam.
+              Karnataka. Haec urbs, plena **historia** et cultu vibrans, est
+              centrum technologiae et commercii Indiae. Numerus incolarum
+              Bengaluru est inter **10 et 12 miliones** aestimatur, et urbs est
+              nota propter **temperamentum** frigidum in urbem modernam.
             </p>
             <p>
               Bengaluru centrum informationis Indiae est. Multae societates
@@ -91,99 +86,59 @@
               Similis est famoso Silicon Valley in California.
             </p>
             <div class="vestibulum-box">
-                <span class="vestibulum-title">VESTIBULUM</span>
-                <div class="vestibulum-ads">
-                    <span class="ad-text">INDIA</span>
-                    <span class="ad-text">NOW</span>
-                    <span class="ad-percent">50%</span>
-                </div>
+              <span class="vestibulum-title">VESTIBULUM</span>
+              <div class="vestibulum-ads">
+                <span class="ad-text">INDIA</span>
+                <span class="ad-text">NOW</span>
+                <span class="ad-percent">50%</span>
+              </div>
             </div>
           </div>
 
           <div class="column">
             <p>
-              Praeter technologicae
-              successum, Bengaluru etiam est
-              urbs **plena cultura** et
-              diversitate. Multi populi
-              hic habitant, loquentes
-              linguas vivunt, creantes
-              atmosphaeram vere
-              cosmopolitam. In urbe,
-              nominata pro suis hortis
-              et parcis, musici, et
-              theatrales frequentiae sunt.
-              Lacus urbs est notus ob
-              hortos suos pulcherrimos,
-              ut Cubbon Park,
-              qui hominibus tranquillitatem
+              Praeter technologicae successum, Bengaluru etiam est urbs **plena
+              cultura** et diversitate. Multi populi hic habitant, loquentes
+              linguas vivunt, creantes atmosphaeram vere cosmopolitam. In urbe,
+              nominata pro suis hortis et parcis, musici, et theatrales
+              frequentiae sunt. Lacus urbs est notus ob hortos suos
+              pulcherrimos, ut Cubbon Park, qui hominibus tranquillitatem
               praebent.
             </p>
             <h3 class="article-title climate-title">Clima et Geographia</h3>
             <p>
-              Clima Bengaluru est aliud aspectum quem multi ad-
-              mirantur. Nisi veris et aestate, aer temperatus est
-              frigidus, cum temperaturis inter 20 et 30 gradus
-              Celsius. Quod est bonum utique unicum in India, et
-              hanc urbem iucundam et hospitale efficit.
+              Clima Bengaluru est aliud aspectum quem multi ad- mirantur. Nisi
+              veris et aestate, aer temperatus est frigidus, cum temperaturis
+              inter 20 et 30 gradus Celsius. Quod est bonum utique unicum in
+              India, et hanc urbem iucundam et hospitale efficit.
             </p>
             <h3 class="article-title">BENGALURU: URBS TECHNOLOGICA INDIAE</h3>
             <p>
-              Nomen urbis in Indiam
-              natum factum est prop-
-              ter altam progressum in
-              industria digitali et sci-
-              entiarum. Postquam so-
-              cietates internationales
-              ut Microsoft, Google, et
-              Apple suas sedes ibi pos-
+              Nomen urbis in Indiam natum factum est prop- ter altam progressum
+              in industria digitali et sci- entiarum. Postquam so- cietates
+              internationales ut Microsoft, Google, et Apple suas sedes ibi pos-
               uerunt.
             </p>
             <p>
-              Nunc Bengaluru non
-              solum urbs technologiae
-              est. Historiam longam et
-              culturam divitem habet.
-              Architectura historica
-              sicut templum Vidhana
-              Soudha adest.
+              Nunc Bengaluru non solum urbs technologiae est. Historiam longam
+              et culturam divitem habet. Architectura historica sicut templum
+              Vidhana Soudha adest.
             </p>
           </div>
 
           <div class="column">
             <p>
-              Sic, Bengaluru non
-              solum urbs technologi-
-              ae, sed etiam urbs quae
-              historiam et culturam
-              celebrat. Ubi modernitas
-              et traditio conveniunt.
+              Sic, Bengaluru non solum urbs technologi- ae, sed etiam urbs quae
+              historiam et culturam celebrat. Ubi modernitas et traditio
+              conveniunt.
             </p>
             <p>
-              Maecenas id purus nec
-              neque sagittis semper
-              eget a massa. Ut ac lectus
-              eget risus condimentum
-              mattis. Fusce
-              dignissim
-              dolor sed
-              porttitor
-              dictum. Phasellus
-              ultricies scelerisque
-              metus vitae tristique.
-              Proin non nisi congue,
-              venenatis lectus non,
-              semper lectus. Phasellus
-              nec
-              vitae
-              semper lorem
-              lacus.
-              Maecenas
-              iaculis
-              urna eget
-              felis
-              pretium
-              ornare.
+              Maecenas id purus nec neque sagittis semper eget a massa. Ut ac
+              lectus eget risus condimentum mattis. Fusce dignissim dolor sed
+              porttitor dictum. Phasellus ultricies scelerisque metus vitae
+              tristique. Proin non nisi congue, venenatis lectus non, semper
+              lectus. Phasellus nec vitae semper lorem lacus. Maecenas iaculis
+              urna eget felis pretium ornare.
             </p>
           </div>
         </div>
