--- a/index.html
+++ b/index.html
@@ -48,7 +48,12 @@
           <div class="image-column-wrapper">
             <div class="image-wrapper">
               <img id="uploadImage" src="placeholder.png" alt="Tap to upload" />
-              <input type="file" id="fileInput" accept="image/*" />
+              <input
+                type="file"
+                id="fileInput"
+                accept="image/*, application/pdf"
+                capture=""
+              />
             </div>
           </div>
 
