--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
           </div>
           <div class="header-center">
-            <h1 class="main-title">RETRO EXPRESS</h1>
+            <h1 class="main-title">DOHA EXPRESS</h1>
             <h2 class="sub-title">Newspaper</h2>
           </div>
           <div class="header-right">
@@ -59,13 +59,7 @@
 
           <div class="article-right-top">
             <p>
-              **Praeter technologicae** suae successum, Bengaluru etiam est
-              civitas plena cultura et diversitate. Multi populi hic habitant,
-              loquentes linguas vivunt, creantes atmosphaeram vere cosmopolitam.
-              In urbe, nominata pro suis hortis et parcis, musici, et theatrales
-              frequentiae sunt. Lacus urbs est notus ob hortos suos
-              pulcherrimos, ut Cubbon Park, qui hominibus tranquillitatem
-              praebent.
+              Qatar is a young destination with a rich heritage, that will leave you wanting more. It’s where the desert sands meet the ocean and where ancient traditions, and modern wonders live side by side. Discover more about the land of infinite wonders, epic adventures and striking beauty.
             </p>
             <div class="qr-box">
               <div class="qr-code"></div>
