--- a/index.html
+++ b/index.html
@@ -70,24 +70,17 @@
 
         <div class="columns">
           <div class="column">
-            <h3 class="article-title">BENGALURU: BENDA KALURA</h3>
+            <h3 class="article-title">THE RICH HISTORY OF QATAR</h3>
             <p>
-              Bengaluru etiam notum ut Bangalore, est urbs maxima in regione
-              Karnataka. Haec urbs, plena **historia** et cultu vibrans, est
-              centrum technologiae et commercii Indiae. Numerus incolarum
-              Bengaluru est inter **10 et 12 miliones** aestimatur, et urbs est
-              nota propter **temperamentum** frigidum in urbem modernam.
+              Qatar – pronounced ‘kuh-TAR’ – is located on the Arabian Peninsula, jutting into the Arabian Gulf. The first evidence of human settlement dates to the 6th millennium BCE. For centuries, Qatar was largely populated by Bedouin tribes and a few fishing villages, shaped by the rule of Arab tribes, Portuguese explorers, Ottoman leaders and the esteemed al-Thani family, whose leadership has significantly influenced the nation's heritage. Qatar’s destiny changed when oil was first discovered in the Dukhan Field in 1940, transforming its economy from pearling, fishing and trade to one of the wealthiest nations in the world.
             </p>
             <p>
-              Bengaluru centrum informationis Indiae est. Multae societates
-              internationales sicut Infosys, TCS, IBM, et Google ibi sedem
-              habent. Ergo, Bengaluru saepe vocatur **"Silicon Valley"** Indiae.
-              Similis est famoso Silicon Valley in California.
+              Doha is the economic and technological center of Qatar. Many international companies such as Qatar Airways, Ooredoo, ExxonMobil, and Shell have headquarters or major operations there. Therefore, Doha is often considered the “Silicon Valley” of Qatar because of its rapid growth in technology and innovation. It is similar to other famous technology hubs around the world.
             </p>
             <div class="vestibulum-box">
               <span class="vestibulum-title">VESTIBULUM</span>
               <div class="vestibulum-ads">
-                <span class="ad-text">INDIA</span>
+                <span class="ad-text">QATAR</span>
                 <span class="ad-text">NOW</span>
                 <span class="ad-percent">50%</span>
               </div>
@@ -96,48 +89,27 @@
 
           <div class="column">
             <p>
-              Praeter technologicae successum, Bengaluru etiam est urbs **plena
-              cultura** et diversitate. Multi populi hic habitant, loquentes
-              linguas vivunt, creantes atmosphaeram vere cosmopolitam. In urbe,
-              nominata pro suis hortis et parcis, musici, et theatrales
-              frequentiae sunt. Lacus urbs est notus ob hortos suos
-              pulcherrimos, ut Cubbon Park, qui hominibus tranquillitatem
-              praebent.
+              Besides its technological and economic success, Doha is also a city rich in culture and diversity. People from many nations live here, speaking different languages and creating a truly cosmopolitan atmosphere. The city, known for its beautiful Corniche and modern architecture, is full of art, music, and cultural events. Doha is also famous for its stunning public spaces and parks, such as Aspire Park, which offer residents and visitors a sense of peace and relaxation.
             </p>
-            <h3 class="article-title climate-title">Clima et Geographia</h3>
+            <h3 class="article-title climate-title">Geography of Qatar</h3>
             <p>
-              Clima Bengaluru est aliud aspectum quem multi ad- mirantur. Nisi
-              veris et aestate, aer temperatus est frigidus, cum temperaturis
-              inter 20 et 30 gradus Celsius. Quod est bonum utique unicum in
-              India, et hanc urbem iucundam et hospitale efficit.
+              Qatar is a country of striking geographical contrasts, from crescent-shaped dunes to a serene coastline of beaches and islands. Learn more about its mix of ultra-modern cities like our capital city of Doha, ancient villages and natural wonders.
             </p>
-            <h3 class="article-title">BENGALURU: URBS TECHNOLOGICA INDIAE</h3>
+            <h3 class="article-title">Traditions of Qatar</h3>
             <p>
-              Nomen urbis in Indiam natum factum est prop- ter altam progressum
-              in industria digitali et sci- entiarum. Postquam so- cietates
-              internationales ut Microsoft, Google, et Apple suas sedes ibi pos-
-              uerunt.
+              The people of Qatar take great pride in their rich tapestry of traditions, from the central role of the majlis and the distinctive aroma of oud, to significant religious holidays and the art of Arabic coffee. Explore some of these special customs.
             </p>
             <p>
-              Nunc Bengaluru non solum urbs technologiae est. Historiam longam
-              et culturam divitem habet. Architectura historica sicut templum
-              Vidhana Soudha adest.
+              Now Doha is not only a city of modern development. It also has a long history and a rich cultural heritage. Historic architecture, such as the traditional buildings in Souq Waqif and the impressive Islamic Art Museum, reflects the nation’s deep cultural roots.
             </p>
           </div>
 
           <div class="column">
             <p>
-              Sic, Bengaluru non solum urbs technologi- ae, sed etiam urbs quae
-              historiam et culturam celebrat. Ubi modernitas et traditio
-              conveniunt.
+              Thus, Doha is not only a city of modern technology and development, but also a place that proudly celebrates its history and culture. It is where modernity and tradition meet in perfect harmony.
             </p>
             <p>
-              Maecenas id purus nec neque sagittis semper eget a massa. Ut ac
-              lectus eget risus condimentum mattis. Fusce dignissim dolor sed
-              porttitor dictum. Phasellus ultricies scelerisque metus vitae
-              tristique. Proin non nisi congue, venenatis lectus non, semper
-              lectus. Phasellus nec vitae semper lorem lacus. Maecenas iaculis
-              urna eget felis pretium ornare.
+             Qatar moves forward with steady confidence, shaping its future with purpose and ambition. In Doha, modern design blends effortlessly with cultural elegance, creating a city full of vibrant energy. New developments rise with precision, while traditions remain strong at the nation’s core. Beautiful public spaces, refined architecture, and innovative projects all contribute to a landscape that continues to grow with grace. Qatar’s progress is steady, balanced, and guided by a clear vision of excellence.
             </p>
           </div>
         </div>
