--- a/index.html
+++ b/index.html
@@ -38,9 +38,8 @@
 
         <div class="header-row">
           <span class="issue-info">NO. 30</span>
-          <span class="issue-info date-center"
-            >THURSDAY, NOVEMBER 11TH, 1945</span
-          >
+          <span class="issue-info date-center" id="current-date"></span>
+          
           <span class="issue-info price-right">PRICE 3 CENTS</span>
         </div>
 
