--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </p>
             <div class="qr-box">
               <div class="qr-code"></div>
-              <div class="qr-text">#rero_picture@qr</div>
+              <div class="qr-text">#doha_picture@qr</div>
             </div>
           </div>
         </div>
