--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <span class="issue-info">NO. 30</span>
           <span class="issue-info date-center" id="current-date"></span>
           
-          <span class="issue-info price-right">PRICE 3 CENTS</span>
+          <span class="issue-info price-right">PRICE 3 QATARI RIYALS</span>
         </div>
 
         <div class="content-grid">
