--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="content-grid">
           <div class="image-column-wrapper">
             <div class="image-wrapper">
-              <img id="uploadImage" src="placeholder.png" alt="Tap to upload" />
+              <img id="uploadImage" src="dummy.jpg" alt="Tap to upload" />
               <input
                 type="file"
                 id="fileInput"
