--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
               Thus, Doha is not only a city of modern technology and development, but also a place that proudly celebrates its history and culture. It is where modernity and tradition meet in perfect harmony.
             </p>
             <div class="climate-div">
-              <h3 class="article-title">Clime et Geographia</h3>
+              <h3 class="article-title">Climate & Geography</h3>
               <p>
                Qatar moves forward with steady confidence, shaping its future with purpose and ambition. In Doha, modern design blends effortlessly with cultural elegance, creating a city full of vibrant energy. New developments rise with precision, while traditions remain strong at the nation’s core. Beautiful public spaces, refined architecture, and innovative projects all contribute to a landscape that continues to grow with grace. Qatar’s progress is steady, balanced, and guided by a clear vision of excellence.
               </p>
