--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
         <div class="columns">
           <div class="column">
-            <h3 class="article-title">THE RICH HISTORY OF QATAR</h3>
+            <h3 class="article-title">THE HISTORY OF QATAR</h3>
             <p style="font-weight: bold;">
               Qatar – pronounced ‘kuh-TAR’–is located on the Arabian Peninsula, jutting into the Arabian Gulf. The first evidence of human settlement dates to the 6th millennium BCE. For centuries, Qatar was largely populated by Bedouin tribes and a few fishing villages, shaped by the rule of Arab tribes, Portuguese explorers, Ottoman leaders and the esteemed al-Thani family, whose leadership has significantly influenced the nation's heritage. Qatar’s destiny changed when oil was first discovered in the Dukhan Field in 1940.
             </p>
