--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               Qatar is a young destination with a rich heritage, that will leave you wanting more. It’s where the desert sands meet the ocean and where ancient traditions, and modern wonders live side by side. Discover more about the land of infinite wonders, epic adventures and striking beauty.
             </p>
             <div class="qr-box">
-              <img id="insta-qr" src="insta-qr.png"/>
+              <img id="insta-qr" src="insta-qr.jpeg"/>
             </div>
           </div>
         </div>
