--- a/index.html
+++ b/index.html
@@ -74,10 +74,7 @@
 
           <div class="column">
             <p>
-              Besides its technological and economic success, Doha is also a city rich in culture and diversity. People from many nations live here, speaking different languages and creating a truly cosmopolitan atmosphere. The city, known for its beautiful Corniche and modern architecture, is full of art, music, and cultural events. Doha is also famous for its stunning public spaces and parks, such as Aspire Park, which offer residents and visitors a sense of peace and relaxation.
-            </p>
-            <p>
-              <img id="zubara-img" src="zubara.jpeg" alt="" />
+              <img id="art-history-img" src="qatar-art-history.webp" alt="" />
             </p>
             
             
