--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
         <div class="columns">
           <div class="column">
-            <h3 class="article-title">HISTORY OF QATAR</h3>
+            <h3 class="article-title">THE HISTORY OF QATAR</h3>
             <p style="font-weight: bold;">
               Qatar – pronounced ‘kuh-TAR’–is located on the Arabian Peninsula, jutting into the Arabian Gulf. The first evidence of human settlement dates to the 6th millennium BCE. For centuries, Qatar was largely populated by Bedouin tribes and a few fishing villages, shaped by the rule of Arab tribes, Portuguese explorers, Ottoman leaders and the esteemed al-Thani family, whose leadership has significantly influenced the nation's heritage. Qatar’s destiny changed when oil was first discovered in the Dukhan Field in 1940.
             </p>
@@ -74,7 +74,10 @@
 
           <div class="column">
             <p>
-              <img id="art-history-img" src="qatar-art-history.webp" alt="" />
+              Besides its technological and economic success, Doha is also a city rich in culture and diversity. People from many nations live here, speaking different languages and creating a truly cosmopolitan atmosphere. The city, known for its beautiful Corniche and modern architecture, is full of art, music, and cultural events. Doha is also famous for its stunning public spaces and parks, such as Aspire Park, which offer residents and visitors a sense of peace and relaxation.
+            </p>
+            <p>
+              <img id="zubara-img" src="zubara.jpeg" alt="" />
             </p>
             
             
