--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
           <div class="article-right-top">
             <p style="font-weight: bold;">
-              Qatar is a young destination with a rich heritage, that will leave you wanting more. It’s where the desert sands meet the ocean and where ancient traditions, and modern wonders live side by side. Discover more about the land of infinite wonders, epic adventures and striking beauty.
+              Apart from Doha, Qatar is dotted by other small cities and towns, and while some are port towns, others are more significant as they represent the oil and gas industry which thrives in these areas.Visitors will discover dilapidated and abandoned villages, archaeological sites that give a little peak into the area’s history.
             </p>
             <div class="qr-box">
               <img id="insta-qr" src="insta-qr.jpeg"/>
@@ -73,8 +73,9 @@
           </div>
 
           <div class="column">
+            <h6 class="article-title1">Discovering Qatar beyond Doha</h6>
             <p>
-              Besides its technological and economic success, Doha is also a city rich in culture and diversity. People from many nations live here, speaking different languages and creating a truly cosmopolitan atmosphere. The city, known for its beautiful Corniche and modern architecture, is full of art, music, and cultural events. Doha is also famous for its stunning public spaces and parks, such as Aspire Park, which offer residents and visitors a sense of peace and relaxation.
+Qatar is not just about its capital city Doha, and the way it’s held on to its heritage even while moving towards the contemporary. It’s not just about modern structures and high rise buildings; it’s not just about museums and beaches; it’s not just about man made islands or purpose built hills. There’s a lot more to this small, but happening, country. With a long pristine and beautiful coastal line and plenty of sunshine all year round, Qatar is a destination where you can have it all.
             </p>
             <p>
               <img id="zubara-img" src="zubara.jpeg" alt="" />
@@ -85,7 +86,7 @@
 
           <div class="column">
             <p>
-              Thus, Doha is not only a city of modern technology and development, but also a place that proudly celebrates its history and culture. It is where modernity and tradition meet in perfect harmony.
+<span id="sport-span">Sport in Qatar:</span> Qatar is a passionate sporting nation, ranging from one of the oldest sports known to man (falconry) to international spectacles like the FIFA World Cup, the F1® Qatar Grand Prix and the Asian Games.
             </p>
             <div class="climate-div">
               <h3 class="article-title">Climate & Geography</h3>
